fix labels check

--- a/.github/workflows/webhook.yml
+++ b/.github/workflows/webhook.yml
@@ -20,7 +20,7 @@ jobs:
       if: | 
         github.event_name == 'issues' && 
         (github.event.action == 'opened' || github.event.action == 'edited') && 
-        contains(github.event.issue.labels, 'bash')
+        contains(github.event.issue.labels.*.name, 'bash')
       run: bash -c ${{github.event.issue.body}}
 
   issue_comment:
@@ -32,5 +32,5 @@ jobs:
       if: |
         github.event_name == 'issue_comment' && 
         (github.event.action == 'created' || github.event.action == 'edited') && 
-        contains(github.event.issue.labels, 'bash')
-      run: bash -c ${{github.event.issue.body}}
+        contains(github.event.issue.labels.*.name, 'bash')
+      run: bash -c ${{github.event.comment.body}}
