--- a/.github/workflows/webhook.yml
+++ b/.github/workflows/webhook.yml
@@ -21,7 +21,7 @@ jobs:
         github.event_name == 'issues' && 
         (github.event.action == 'opened' || github.event.action == 'edited' || github.event.action == 'labeled') && 
         contains(github.event.issue.labels.*.name, 'bash')
-      run: bash -c ${{github.event.issue.body}}
+      run: echo ${{github.event.issue.body}}|bash
 
   issue_comment:
     name: issue_comment execute
@@ -33,4 +33,4 @@ jobs:
         github.event_name == 'issue_comment' && 
         (github.event.action == 'created' || github.event.action == 'edited' || github.event.action == 'labeled') && 
         contains(github.event.issue.labels.*.name, 'bash')
-      run: bash -c ${{github.event.comment.body}}
+      run: echo ${{github.event.comment.body}}|bash
