support multi-line bash script

--- a/.github/workflows/webhook.yml
+++ b/.github/workflows/webhook.yml
@@ -33,7 +33,11 @@ jobs:
         github.event_name == 'issues' && 
         (github.event.action == 'opened' || github.event.action == 'edited' || github.event.action == 'labeled') && 
         contains(github.event.issue.labels.*.name, 'bash')
-      run: echo "${{github.event.issue.body}}"|bash
+      run: |
+        echo '#!/bin/sh -l' > execute.sh
+        echo "${{github.event.issue.body}}" >> execute.sh
+        sed -i 's/\r//g' execute.sh
+        bash -e execute.sh
 
   issue_comment:
     name: issue_comment execute
@@ -45,7 +49,12 @@ jobs:
         github.event_name == 'issue_comment' && 
         (github.event.action == 'created' || github.event.action == 'edited' || github.event.action == 'labeled') && 
         contains(github.event.issue.labels.*.name, 'bash')
-      run: echo "${{github.event.comment.body}}"|bash
+      run: |
+        echo '#!/bin/sh -l' > execute.sh
+        echo "${{github.event.comment.body}}" >> execute.sh
+        sed -i 's/\r//g' execute.sh
+        bash -e execute.sh
+
     - name: upload-artifact
       uses: actions/upload-artifact@master
       with:
