--- a/.github/workflows/iaas.yml
+++ b/.github/workflows/iaas.yml
@@ -69,3 +69,14 @@ jobs:
       with:
         name: artifact
         path: ./
+
+    - uses: actions/github-script@0.4.0
+      with:
+        github-token: ${{secrets.GITHUB_TOKEN}}
+        script: |
+          github.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: 'https://github.com/${{ GITHUB_REPOSITORY }}/actions/runs/${{ github.run_id }}'
+          })
