--- a/.github/workflows/iaas.yml
+++ b/.github/workflows/iaas.yml
@@ -78,5 +78,5 @@ jobs:
             issue_number: context.issue.number,
             owner: context.repo.owner,
             repo: context.repo.repo,
-            body: 'https://github.com/${{ GITHUB_REPOSITORY }}/actions/runs/${{ github.run_id }}'
+            body: 'https://github.com/${ GITHUB_REPOSITORY }/actions/runs/${{ github.run_id }}'
           })
