--- a/.github/workflows/iaas.yml
+++ b/.github/workflows/iaas.yml
@@ -72,11 +72,12 @@ jobs:
 
     - uses: actions/github-script@0.4.0
       with:
-        github-token: ${{secrets.GITHUB_TOKEN}}
+        github-token: ${{github.token}}
         script: |
-          github.issues.createComment({
-            issue_number: context.issue.number,
+          github.issues.updateComment({
             owner: context.repo.owner,
             repo: context.repo.repo,
-            body: 'https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}'
+            comment_id: ${{ github.event.comment.id }},
+            body: ${{ github.event.comment.body }} + '\n' + 'https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}'
           })
+
