--- a/.github/workflows/iaas.yml
+++ b/.github/workflows/iaas.yml
@@ -78,5 +78,5 @@ jobs:
             issue_number: context.issue.number,
             owner: context.repo.owner,
             repo: context.repo.repo,
-            body: '${{ github.event.comment.html_url }} -> https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}'
+            body: 'comment job: ${{ github.event.comment.html_url }} -> [actions/runs](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})'
           })
