--- a/.github/workflows/iaas.yml
+++ b/.github/workflows/iaas.yml
@@ -27,7 +27,7 @@ jobs:
         script: |
           github.issues.addLabels({
             owner: context.repo.owner,
-            repo: context.repo.owner,
+            repo: context.repo.repo,
             issue_number: context.issue.number,
             labels: ['iaas']
           })
